--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "file-loader": "^6.2.0",
+    "postcss-cssnext": "^3.1.1",
+    "postcss-loader": "^6.1.1",
+    "style-loader": "^3.3.0",
+    "url-loader": "^4.1.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
   }
